# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: page-analyzer.yml
page_analyzer/: __init__.py  app.py  db.py  model.py  validator.py
page_analyzer/templates/: header.html  index.html  page_not_found.html  show.html  urls.html
